# test-technique-guest-suite

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
data/: .gitignore
test_technique_guest_suite/: .gitignore  data_exploration.ipynb  model_fit.py  model_prediction.py
