[tool.poetry]
name = "test-technique-guest-suite"
version = "0.1.0"
description = ""
authors = ["zerippeur <zerippeur@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
plotly = "^5.23.0"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
kaleido = "0.1.0post1"
imbalanced-learn = "^0.12.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^24.3.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.9.23"
isort = "^5.10.1"
pylint = "^2.15.5"
deptry = "^0.14.2"
jupyter = "^1.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
